# thirdparty

./: .gitignore  .gitmodules  CMakeLists.txt
sources/AvroC/: CMakeLists.txt  cmake_avrolib.bat
sources/AvroC/1.7.6/: CMakeLists.txt
sources/AvroC/1.7.6/docs/: index.html
sources/AvroC/docs/: index.html
sources/AvroC/src/: avroappend.c  schema.c
sources/boost/: CMakeLists.txt
sources/bzip2/: CMakeLists.txt  Readme.txt
sources/bzip2/1.0.6/: libbz2.lib
sources/gtest/: CMakeLists.txt  Readme.txt
sources/gtest/1.7.0/: CMakeLists.txt
sources/libarchive/: CMakeLists.txt  build.bat
sources/libevent/: CMakeLists.txt
sources/libevent/2.0.21/: libevent.lib  libevent_core.lib  libevent_extras.lib
sources/libuv/: CMakeLists.txt
sources/openssl/: CMakeLists.txt
sources/openssl/1.0.1g/: Makefile
sources/openssl/1.0.1g/crypto/: opensslconf.h
sources/test/: CMakeLists.txt
sources/zlib/: ReadMe.txt
